--- a/VirtoCommerce.QuoteModule.Web/Scripts/widgets/quote-asset-widget.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/widgets/quote-asset-widget.tpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="gridster-cnt" ng-click="openBlade()">
     <div class="cnt-inner">
         <div class="list-count">{{blade.currentEntity.attachments.length}}</div>
-        <div class="list-t">Attachments</div>
+        <div class="list-t">{{ 'quotes.widgets.quotes-assets.title' | translate }}</div>
     </div>
 </div>
