--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
@@ -11,7 +11,8 @@
     <div class="blade-inner">
         <div class="inner-block">
             <div class="table-wrapper">
-                <table class="table">
+                <div ui-grid="gridOptions" ui-grid-save-state ui-grid-selection ui-grid-resize-columns ui-grid-move-columns></div>
+                <!--<table class="table">
                     <thead>
                         <tr>
                             <th class="table-col __product-control">
@@ -62,9 +63,16 @@
                             </td>
                         </tr>
                     </tbody>
-                </table>
+                </table>-->
             </div>
             <p class="text" ng-if="!blade.currentEntities.length">No Quotes yet</p>
         </div>
     </div>
 </div>
+
+<script type="text/ng-template" id="am-time-ago.cell.html">
+        <span class="table-date" am-time-ago="COL_FIELD"></span>
+    <!--<div class="ui-grid-cell-contents">
+        <span class="table-date" am-time-ago="COL_FIELD"></span>
+    </div>-->
+</script>
