Fixed Quote module localisation

--- a/VirtoCommerce.QuoteModule.Web/Scripts/dialogs/cancelQuote-dialog.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/dialogs/cancelQuote-dialog.tpl.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
     <p>{{ 'quotes.dialogs.quote-cancel.message' | translate }}</p>
     <div class="form-input">
-        <textarea placeholder="Enter cancel reason here..." ng-model="cancelReason"></textarea>
+        <textarea placeholder="{{ 'quotes.dialogs.quote-cancel.placeholders.reason' | translate }}" ng-model="cancelReason"></textarea>
 </div>
 </div>
 <div class="modal-footer">
