--- a/VirtoCommerce.QuoteModule.Web/Scripts/widgets/quote-address-widget.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/widgets/quote-address-widget.tpl.html
@@ -2,9 +2,9 @@
     <div class="cnt-inner" ng-if="address">
         <div class="list-t">{{address.firstName}} {{address.lastName}}</div>
         <div class="list-t">{{address.countryCode}}, {{ address.regionName}}, {{address.city}}, {{address.line1}}</div>
-        <div class="list-t">{{ 'quotes.widgets.address-list.address-type' | translate }}: {{address.addressType}}</div>
+        <div class="list-t">{{ 'quotes.widgets.quote-address.address-type' | translate }}: {{address.addressType}}</div>
     </div>
     <div class="cnt-inner" ng-if="!address">
-        <div class="list-count">{{ 'quotes.widgets.address-list.no-address' | translate }}</div>
+        <div class="list-count">{{ 'quotes.widgets.quote-address.no-address' | translate }}</div>
     </div>
 </div>
