--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
@@ -10,7 +10,21 @@
 <div class="blade-content __medium-wide">
     <div class="blade-inner">
         <div class="inner-block">
-            <div class="table-wrapper">
+            <div class="table-wrapper" ng-init="setGridOptions({
+                    rowTemplate: 'quotes-list.row.html',
+                    columnDefs: [
+                        { name: 'number', displayName: 'Quote #', cellTooltip: true },
+                        { name: 'status' },
+                        { name: 'items.length', displayName: 'Items count' },
+                        { name: 'customerName', displayName: 'Customer', cellTooltip: true },
+                        {
+                            name: 'createdDate', displayName: 'Created',
+                            sort: {
+                                direction: uiGridConstants.DESC
+                            },
+                            cellTemplate: 'am-time-ago.cell.html'
+                        }
+                    ]})">
                 <div ui-grid="gridOptions" ui-grid-save-state ui-grid-selection ui-grid-resize-columns ui-grid-move-columns></div>
                 <!--<table class="table">
                     <thead>
@@ -70,6 +84,9 @@
     </div>
 </div>
 
+<script type="text/ng-template" id="quotes-list.row.html">
+    <div ng-click='grid.appScope.selectNode(row.entity)' ng-repeat="(colRenderIndex, col) in colContainer.renderedColumns track by col.uid" ui-grid-one-bind-id-grid="rowRenderIndex + '-' + col.uid + '-cell'" class="ui-grid-cell" ng-class="{'ui-grid-row-header-cell': col.isRowHeader, '__selected': row.entity.id===grid.appScope.selectedNodeId }" role="{{col.isRowHeader ? 'rowheader' : 'gridcell' }}" ui-grid-cell style='cursor:pointer'></div>
+</script>
 <script type="text/ng-template" id="am-time-ago.cell.html">
         <span class="table-date" am-time-ago="COL_FIELD"></span>
     <!--<div class="ui-grid-cell-contents">
