ui-grid - grid height fixed, refactored

--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
@@ -23,7 +23,7 @@
                             width: 87, cellTemplate: 'am-time-ago.cell.html'
                         }
                     ]})">
-                <div ui-grid="gridOptions" ui-grid-save-state ui-grid-selection ui-grid-resize-columns ui-grid-move-columns></div>
+                <div ui-grid="gridOptions" ui-grid-save-state ui-grid-selection ui-grid-resize-columns ui-grid-move-columns ui-grid-height></div>
             </div>
             <p class="text" ng-if="!blade.currentEntities.length">{{ 'quotes.blades.quotes-list.labels.no-quotes' | translate }}</p>
         </div>
